--- a/Week03/deliverable04/index.html
+++ b/Week03/deliverable04/index.html
@@ -50,6 +50,42 @@
             </label>
           </li>
         </ul>
+        <p>
+          <label for="name">
+            <span>Name: </span>
+            <strong>
+              <span aria-label="required">*</span>
+            </strong>
+          </label>
+          <input type="text" id="name" name="username" required>
+        </p>
+        <p>
+          <label for="mail">
+            <span>Email: </span>
+            <strong>
+              <span aria-label="required">*</span>
+            </strong>
+          </label>
+          <input type="email" id="mail" name="usermail" required>
+        </p>
+        <p>
+          <label for="pwd">
+            <span>Password: </span>
+            <strong>
+              <span aria-label="required">*</span>
+            </strong>
+          </label>
+          <input type="password" id="pwd" name="password" required>
+        </p>
+        <p>
+          <label for="confirm">
+            <span>Confirm Password: </span>
+            <strong>
+              <span aria-label="required">*</span>
+            </strong>
+          </label>
+          <input type="password" id="confirm" name="confirm_password" required>
+        </p>
       </fieldset>
     </section>
   </form>
