--- a/Week03/deliverable04/index.html
+++ b/Week03/deliverable04/index.html
@@ -88,6 +88,38 @@
         </p>
       </fieldset>
     </section>
+    <section>
+      <h2>Payment Information</h2>
+      <p>
+        <label for="card">
+          <span>Card Type: </span>
+        </label>
+        <select name="usercard" id="card">
+          <option value="visa">Visa</option>
+          <option value="mc">Mastercard</option>
+          <option value="amex">American Express</option>
+        </select>
+      </p>
+      <p>
+        <label for="number">
+          <span>Card number: </span>
+          <strong><span aria-label="required">*</span></strong>
+        </label>
+        <input type="tel" id="number" name="cardnumber" required>
+      </p>
+      <p>
+        <label for="expiration">
+          <span>Expiration Date: </span>
+          <strong><span aria-label="required">*</span></strong>
+        </label>
+        <input
+          type="text"
+          id="expiration"
+          placeholder="MM/YY"
+          pattern="^(0[1-9]|1[0-2])\/([0-9]{2})$"
+          required>
+      </p>
+    </section>
   </form>
 </body>
 </html>
