added submit button

--- a/Week03/deliverable04/index.html
+++ b/Week03/deliverable04/index.html
@@ -120,6 +120,11 @@
           required>
       </p>
     </section>
+    <section>
+      <p>
+        <button type="submit">Validate the payment</button>
+      </p>
+    </section>
   </form>
 </body>
 </html>
