added value property to radio buttons

--- a/Week04/02_checkable_items.html
+++ b/Week04/02_checkable_items.html
@@ -58,15 +58,15 @@
       </ul>
       <ul>
         <li>          
-          <input type="radio" name="size" id="sm">
+          <input type="radio" name="size" value="sm" id="sm">
           <label for="sm">Small</label>
         </li>
         <li>          
-          <input type="radio" name="size" id="reg">
+          <input type="radio" name="size" value="reg" id="reg">
           <label for="reg">Regular</label>
         </li>
         <li>          
-          <input type="radio" name="size" id="lrg">
+          <input type="radio" name="size" value="lrg" id="lrg">
           <label for="lrg">Large</label>
         </li>
       </ul>
