--- a/Week06/deliverable05/index.html
+++ b/Week06/deliverable05/index.html
@@ -130,6 +130,34 @@
     </nav>
   </header>
 
+  <main>
+    <div
+        id="myCarousel"
+        class="carousel slide active"
+        data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#myCarousel"
+          data-bs-slide="0"
+          aria-label="Slide 1">
+        </button>
+        <button
+          type="button"
+          data-bs-target="#myCarousel"
+          data-bs-slide="1"
+          aria-label="Slide 2">
+        </button>
+        <button
+          type="button"
+          data-bs-target="#myCarousel"
+          data-bs-slide="2"
+          aria-label="Slide 3">
+        </button>
+      </div>
+    </div>
+  </main>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
