--- a/Week06/deliverable05/index.html
+++ b/Week06/deliverable05/index.html
@@ -155,6 +155,50 @@
           aria-label="Slide 3">
         </button>
       </div>
+      <div class="carousel-inner">
+        <div class="carousel-item">
+          <svg class="bd-placeholder-img active" width="100%" height="100%">
+            <rect width="100%" height="100%" fill="#777"></rect>
+          </svg>
+          <div class="container">
+            <div class="carousel-caption text-start">
+              <h1>Example headline</h1>
+              <p>Some representative placeholder content for the first slide of the carousel</p>
+              <p>
+                <a href="#" class="btn btn-lg btn-primary">Sign up today</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <svg class="bd-placeholder-img active" width="100%" height="100%">
+            <rect width="100%" height="100%" fill="#777"></rect>
+          </svg>
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Another example headline</h1>
+              <p>Some representative placeholder content for the second slide of the carousel</p>
+              <p>
+                <a href="#" class="btn btn-lg btn-primary">Learn more</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <svg class="bd-placeholder-img active" width="100%" height="100%">
+            <rect width="100%" height="100%" fill="#777"></rect>
+          </svg>
+          <div class="container">
+            <div class="carousel-caption text-end">
+              <h1>One more for good measure.</h1>
+              <p>Some representative placeholder content for the third slide of the carousel</p>
+              <p>
+                <a href="#" class="btn btn-lg btn-primary">Browse Gallery</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
 
