--- a/Week06/deliverable05/index.html
+++ b/Week06/deliverable05/index.html
@@ -7,23 +7,35 @@
   <title>Deliverable 05 - Bootstrap Carousel</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <style type="text/css">
+    /* GLOBAL STYLES
+-------------------------------------------------- */
+    /* Padding below the footer and lighter body text */
+
     body {
       padding-top: 3rem;
       padding-bottom: 3rem;
       color: #5a5a5a;
     }
 
+
+    /* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+    /* Carousel base class */
     .carousel {
       margin-bottom: 4rem;
     }
 
+    /* Since positioning the image, we need to help out the caption */
     .carousel-caption {
       bottom: 3rem;
       z-index: 10;
     }
 
+    /* Declare heights because of positioning of img element */
     .carousel-item {
       height: 32rem;
+      background-color: #777;
     }
 
     .carousel-item>img {
@@ -34,6 +46,11 @@
       height: 32rem;
     }
 
+
+    /* MARKETING CONTENT
+-------------------------------------------------- */
+
+    /* Center align the text within the three columns below the carousel */
     .marketing .col-lg-4 {
       margin-bottom: 1.5rem;
       text-align: center;
@@ -48,17 +65,29 @@
       margin-left: .75rem;
     }
 
+
+    /* Featurettes
+------------------------- */
+
     .featurette-divider {
       margin: 5rem 0;
+      /* Space out the Bootstrap <hr> more */
     }
 
+    /* Thin out the marketing headings */
     .featurette-heading {
       font-weight: 300;
       line-height: 1;
       letter-spacing: -.05rem;
     }
 
+
+    /* RESPONSIVE CSS
+-------------------------------------------------- */
+
     @media (min-width: 40em) {
+
+      /* Bump up size of carousel content */
       .carousel-caption p {
         margin-bottom: 1.25rem;
         font-size: 1.25rem;
@@ -75,34 +104,18 @@
         margin-top: 7rem;
       }
     }
-
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
   </style>
 </head>
+
 <body>
 
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
         <a href="#" class="navbar-brand">Benilde Student Information System</a>
-        <button
-            class="navbar-toggler" type="button"
-            data-bs-toggle="collapse" data-bs-target="navbarCollapse"
-            aria-controls="navbarCollapse" aria-expanded="false"
-            aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>     
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="navbarCollapse"
+          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
@@ -118,9 +131,7 @@
             </li>
           </ul>
           <form class="d-flex">
-            <input
-              type="search" placeholder="Search" aria-label="Search"
-              class="form-control me-2">
+            <input type="search" placeholder="Search" aria-label="Search" class="form-control me-2">
             <button class="btn btn-outline-success" type="submit">
               Search
             </button>
@@ -131,74 +142,58 @@
   </header>
 
   <main>
-    <div
-        id="myCarousel"
-        class="carousel slide active"
-        data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button
-          type="button"
-          data-bs-target="#myCarousel"
-          data-bs-slide="0"
-          aria-label="Slide 1">
-        </button>
-        <button
-          type="button"
-          data-bs-target="#myCarousel"
-          data-bs-slide="1"
-          aria-label="Slide 2">
-        </button>
-        <button
-          type="button"
-          data-bs-target="#myCarousel"
-          data-bs-slide="2"
-          aria-label="Slide 3">
-        </button>
-      </div>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class=""></li>
+        <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+        <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
+      </ol>
       <div class="carousel-inner">
         <div class="carousel-item">
-          <svg class="bd-placeholder-img active" width="100%" height="100%">
-            <rect width="100%" height="100%" fill="#777"></rect>
-          </svg>
+          <img class="first-slide"
+            src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
           <div class="container">
-            <div class="carousel-caption text-start">
-              <h1>Example headline</h1>
-              <p>Some representative placeholder content for the first slide of the carousel</p>
-              <p>
-                <a href="#" class="btn btn-lg btn-primary">Sign up today</a>
-              </p>
+            <div class="carousel-caption text-left">
+              <h1>Example headline.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
+                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <svg class="bd-placeholder-img active" width="100%" height="100%">
-            <rect width="100%" height="100%" fill="#777"></rect>
-          </svg>
+        <div class="carousel-item active carousel-item-left">
+          <img class="second-slide"
+            src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline</h1>
-              <p>Some representative placeholder content for the second slide of the carousel</p>
-              <p>
-                <a href="#" class="btn btn-lg btn-primary">Learn more</a>
-              </p>
+              <h1>Another example headline.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
+                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <svg class="bd-placeholder-img active" width="100%" height="100%">
-            <rect width="100%" height="100%" fill="#777"></rect>
-          </svg>
+        <div class="carousel-item carousel-item-next carousel-item-left">
+          <img class="third-slide"
+            src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
           <div class="container">
-            <div class="carousel-caption text-end">
+            <div class="carousel-caption text-right">
               <h1>One more for good measure.</h1>
-              <p>Some representative placeholder content for the third slide of the carousel</p>
-              <p>
-                <a href="#" class="btn btn-lg btn-primary">Browse Gallery</a>
-              </p>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
+                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
         </div>
       </div>
+      <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </main>
 
